external/qt-everywhere-opensource-src-5.9.1/qtscxml/tests/auto/parser/data/syntaxErrors3.scxml.errors
:/tst_parser/data/syntaxErrors3.scxml:16:64: error: Unknown element assige
:/tst_parser/data/syntaxErrors3.scxml:18:12: error: Error parsing SCXML file: Opening and ending tag mismatch.
