external/qt-everywhere-opensource-src-5.9.1/qtscxml/tests/auto/parser/data/syntaxErrors3.scxml
<?xml version="1.0" ?>
<scxml xmlns="http://www.w3.org/2005/07/scxml" version="1.0">
    <state id="wrapper">
        <state id="ready">
id="result">
            </state>
        </state>
        <state id="o]erand1">
        </state>
        <state id="operand2">
            <transition event="EQUALS" target="result">
            </transition>
        </state>

        <transition event="OP.INSERT">
            <assige location="long_expr" expr="long_expr+'*'" />
        </transition>
    </state>
</scxml>
